# stack_unwinding

./: README.md  destructor_but_not_terminator.hpp  scope_action.hpp  stack_unwinding.hpp  two_stage_destructor.hpp  unwinding_aware_destructor.hpp
boost/: scope_failure.hpp  scope_success.hpp
boost/exception/: uncaught_exception_count.hpp
examples/: CMakeLists.txt  CMakeWinBuildTest.py  FILE_defer_and_release.cpp  boost_scopes.cpp  boost_scopes_cpp11.cpp  destructor_but_not_terminator.cpp  example_from_dlang_dot_org.cpp  examples_common.hpp  file_throwing_dtor.cpp  scope_actions.cpp  scope_guard.cpp  self_contained_cpp11.cpp  two_stage_destructor.cpp  uncaught_exception_count.cpp  uncaught_exception_count_floating_object.cpp  uncaught_exception_count_stress_test.cpp  unwinding_aware_destructor.cpp
wild_sutff/: unwinding_aware_destructor.hpp
